# ta_mrc_pe_cc_tube_mpc

./: .gitignore  ASSUMPTIONS.md  EXPERT_REVIEW_REPORT.md  FINAL_REVIEW_ROUND3.md  FIXES_SUMMARY.md  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  实验方案_V5_代码对齐版.md
configs/: default.yaml  rules.yaml  scenarios_core.yaml  scenarios_extended.yaml  scenarios_imazu.yaml  statistics.yaml  vessel.yaml  vessel_standard.yaml
data/: README.md  docx_text.txt
docs/: FINAL_AUDIT_REPORT.md  SCI_Q1_EXPERIMENT_PLAN.md  baselines_and_ablations.md  controller_architecture.md  experiment_protocol.md  gpu_acceleration.md  known_limitations.md  limitations.md  reproducibility.md  theory_claim_boundaries.md
scripts/: aggregate_results.py  analyze_results.py  audit_failure_cases.py  benchmark_gpu.py  build_episodes.py  check_90plus_readiness.py  extract_ais_episodes.py  extract_enc.py  make_report.py  plot_paper_figures.py  preprocess_ais.py  render_trajectory_video.py  run_all.py  run_all_ablations.py  run_all_core.py  run_all_extended.py  run_all_sensitivity.py  run_real_ais_replay.py  run_remaining_ablations.py  run_single_scenario.py  run_statistical_tests.py  run_statistics.py  run_verification_pipeline.py  validate_surrogate_vs_mmg.py
src/: __init__.py
tests/: test_ais_episode_builder.py  test_audit_fixes_20260608.py  test_baseline_registry.py  test_cbf_qp.py  test_chance_constraints.py  test_chance_risk_allocation.py  test_collision_geometry.py  test_colregs_enhanced.py  test_controller.py  test_cpa.py  test_dynamic_ship_domain.py  test_dynamic_window.py  test_experiment_smoke_entrypoints.py  test_external_baselines.py  test_failure_audit.py  test_fallback.py  test_imm_behavior.py  test_integration_experiment.py  test_jax_integration.py  test_metrics.py  test_metrics_unified_across_methods.py  test_mmg_3dof.py  test_mmg_jax.py  test_mpc_problem.py  test_nonfinite_diagnostics.py  test_paper_quality_regression.py  test_physics_effects.py  test_real_data_pipeline.py  test_rule_priority.py  test_rules.py  test_safety_evaluator.py  test_statistics_pipeline.py  test_surrogate_validation_script.py  (+4 more)
(+106 files in other folders)
