[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta_mrc_pe_cc_tube_mpc"
version = "0.1.0"
description = "Target-Aware Multi-Rule Constrained Physics-Enhanced Chance-Constrained Tube MPC for ship collision avoidance in restricted waters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
dependencies = [
    # ── Core: always needed ──
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "shapely>=2.0",
    "statsmodels>=0.13",
    "patsy>=0.5",              # required by statsmodels formula interface
    "cvxpy>=1.3",              # CBF-QP default QP solver (OSQP backend)
    "tqdm>=4.64",
    "rich>=13.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
# ── MPC solver backends ──
solver = [
    "casadi>=3.6.0",
]
# ── Parallel / distributed execution ──
parallel = [
    "ray>=2.9.0",
]
# ── Publication-quality plotting ──
plotting = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
# ── Development & testing ──
dev = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]
# ── GPU acceleration (JAX backend) ──
jax = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "jaxopt>=0.8",
]
# ── Everything ──
all = [
    "ta_mrc_pe_cc_tube_mpc[solver,parallel,plotting,dev,jax]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
